# codewars-solver

./: .gitignore  .pre-commit-config.yaml  README.md  bandit.yml  noxfile.py  pyproject.toml
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml  question.yml
.github/workflows/: constraints.txt  labeler.yml  release.yml  tests.yml
data/: README.md
src/codewars_solver/: __init__.py  __main__.py  cli.py  config.py  consts.py  logs.py
tests/: __init__.py  test_temp.py
